Fixed css for contact page on mobile

--- a/src/pages/Contact.module.css
+++ b/src/pages/Contact.module.css
@@ -81,4 +81,8 @@
   .contactInfo {
     font-size: 1.1em;
   }
+
+  .container {
+    margin-top: 100px;
+  }
 }
